# 3D_Wire_frame_engine

./: CMakeLists.txt  README.md  notes.txt
crap/: engine.cpp
crap/headers/: cameraObject.h  engine.h  phdr.h
include/headers/: cameraObject.h  engine.h  mesh.h  presets.h  sceneObject.h
include/relay/: rle.hpp
src/: engine.cpp  main.cpp  mesh.cpp  phdr.cpp  rle.cpp
